--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "jquery": "^3.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3080 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0"
   }
 }
